# Software-Developer-Resume

./: ReadMe.txt
New Materials/: Readme.txt
New Materials/First course - SB/: ReadMe.txt
Old Materials/: Readme.txt
Old Materials/C_plus_plus_OOP/: Readme.txt
Old Materials/C_plus_plus_OOP/1. From #72/: main.cpp
Old Materials/C_plus_plus_OOP/2. From #82/: main.cpp
Old Materials/C_plus_plus_OOP/3. From #89/: main.cpp
Old Materials/C_plus_plus_OOP/4. From #98/: main.cpp
Old Materials/C_plus_plus_OOP/C_plus_plus_OOP.xcodeproj/: project.pbxproj
Old Materials/C_plus_plus_from_the_basics/: Readme.txt
Old Materials/C_plus_plus_from_the_basics/1. From #1/: main.cpp
Old Materials/C_plus_plus_from_the_basics/10. From #65/: main.cpp
Old Materials/C_plus_plus_from_the_basics/2. From #8/: main.cpp
Old Materials/C_plus_plus_from_the_basics/3. From #11/: main.cpp
Old Materials/C_plus_plus_from_the_basics/4. From #25/: main.cpp
Old Materials/C_plus_plus_from_the_basics/5. From #33/: main.cpp
Old Materials/C_plus_plus_from_the_basics/6. Flight on fancy#1/: main.cpp
Old Materials/C_plus_plus_from_the_basics/7. Form #45/: main.cpp
Old Materials/C_plus_plus_from_the_basics/8. From #53/: main.cpp
Old Materials/C_plus_plus_from_the_basics/9. From #60/: main.cpp
Old Materials/C_plus_plus_from_the_basics/C_plus_plus_from_the_basics.xcodeproj/: project.pbxproj
Old Materials/ROS/: 2boffb_node.cpp  Readme.txt
Old Materials/ROS/rqt_gui_main_cpp/: CMakeLists.txt  package.xml  plugin.xml  resourses.qrc  setup.py
Old Materials/ROS/rqt_gui_main_cpp/include/rqt_gui_main_cpp/: my_plugin.h  rlf.h
Old Materials/ROS/rqt_gui_main_cpp/src/rqt_gui_main_cpp/: my_plugin.cpp  my_plugin.ui  rlf.cpp
Old Materials/RTOS/: Readme.txt
Old Materials/RTOS/prog1/: Makefile  main.c
Old Materials/RTOS/prog2.4/: Makefile  main.c
Old Materials/RTOS/prog3/: Makefile  main.c
Old Materials/RTOS/prog4.2/: Makefile  main.c
Old Materials/RTOS/prog5/: Makefile  main.c
Old Materials/RTOS/prog6/: Makefile  main.c
Old Materials/Samsung IoT/: Readme.txt
Old Materials/Samsung IoT/Кейс 1/: Код ШИМ.docx  Код датчик почвы.docx  Код мигания.docx  Код нажатие кнопок.docx  Код нажатия кнопки.docx  Код практикум.docx  Код щелчки реле.docx
Old Materials/Samsung IoT/Кейс 2/2.1/: Листинг Дальномер.docx  Листинг акселерометр.docx  Листинг метеодатчик.docx
Old Materials/Samsung IoT/Кейс 2/2.3-2.4/: Код Прерывания.docx  Код Таймер.docx  Код мигалки+потоки+2.4.docx
Old Materials/Samsung IoT/Кейс 2/2.5/: Код Практикума 2.5.docx
Old Materials/Samsung IoT/Кейс 3/: Листинг_кейс_3.docx
Old Materials/Samsung IoT/Кейс 4/: Листинг Python подпись.docx  Листинг mqtt брокер.docx
Old Materials/Sobes/: Readme.txt
Old Materials/Sobes/Diamond test/BackUp/: main.cpp
Old Materials/Sobes/Diamond test/Diamond test.xcodeproj/: project.pbxproj
Old Materials/Sobes/Diamond test/Test 1/: main.cpp
Old Materials/Sobes/Diamond test/Test 2/: main.cpp
Old Materials/Sobes/Diamond test/Test 3/: main.cpp
Old Materials/Tasks from the Unified State Exam/FDP/: Ex1.py  Ex2.py  Exp3.py  Task1.py  Task12.py  Task15.py  Task16.py  Task2.py  Task24.py  Task3.py  Task34.py  Task36.py  Task4.py  Task5.py  Task8.py  Test.py  Test2.py
Old Materials/Tasks from the Unified State Exam/FDP/16/: Exp1.py  Exp1_1.py  Exp2.py  Exp3.py  Exp4.py  Exp5.py  Exp6.py  Plat.py
Old Materials/Tasks from the Unified State Exam/FDP_New/19-21/: 1.19.py  1.20.py  1.21.py  1.py  3.py  Sem.py
Old Materials/Tasks from the Unified State Exam/Task12/: Ex_1.py  Ex_2.py  Grp_1.py  Grp_2.py  Task_1.py  Task_10.py  Task_11.py  Task_12.py  Task_13.py  Task_14.py  Task_15.py  Task_16.py  Task_17.py  Task_18.py  Task_2.py  Task_20.py  Task_21.py  Task_22.py  Task_23.py  Task_24.py  Task_25.py  Task_25_2.py  Task_26.py  Task_28.py  Task_3.py  Task_4.py  Task_5.py  Task_6.py  Task_7.py  Task_8.py  Task_9.py
Old Materials/Tasks from the Unified State Exam/ЕГЭномер8/: 123.py  13_Exp_1.py  13_Exp_2.py  13_Exp_3.py  13_Exp_4.py  2_Exp_1.py  2_Task1.py  2_Task10.py  2_Task19.py  2_Task2.py  2_Task3.py  2_Task_31.py  2_Task_40.py  2_Task_50.py  Exp1.py  Exp2.py  Exp3.py  Num_11.py  Task13 as +.py  Task15.py  Task18.py  Task22.py  Task24.py  Task29.py  Task31.py  Task34.py  Task38.py  Task42.py  Task46.py  Task50.py
Old Materials/Tasks from the Unified State Exam/ЕГЭномер8/23/: HERE.py  HERE2.py  HERE_3.py  KR_15.py  P1.py  P2.py  P3.py  P4.py  Sem_3.py  Sem_7.py
Old Materials/Tasks from the Unified State Exam/ЕГЭномер8/Ex15/: 1.py  Ex_1.py  Ex_10.py  Ex_15.py  Ex_20.py  Ex_3.py  Ex_31.py  Ex_3_1.py  Ex_40.py  Ex_5.py  Ex_59.py  Ex_62.py  Ex_80_?.py  Ex_83.py  Exp_1.py  Exp_2.py  Exp_3.py  Exp_4.py  Exp_5.py  Exp_6.py
Old Materials/Tasks from the Unified State Exam/ЕГЭномер8/KR-2/: 12.py  13.py  2.py  4_10.py  5.py  6.py  7.py  9.py  9.xls  Old.py
Old Materials/Tasks from the Unified State Exam/ЕГЭномер8/KR-razbor/: Ex_13.py  Ex_14.py  Ex_19.py  Ex_20.py  Ex_6.py  Ex_7.py  Ex_8.py  Ex_9.py
Old Materials/Yandex ВКР/: Readme.txt  main.py
Old Materials/С++ tasks/: Readme.txt
Old Materials/С++ tasks/PureCodeCpp #1/: main.cpp
Old Materials/С++ tasks/PureCodeCpp #2/: main.cpp
Old Materials/С++ tasks/PureCodeCpp#3/: main.cpp
Old Materials/С++ tasks/Yandex backend contest #1/: main.cpp
Old Materials/С++ tasks/С++ tasks.xcodeproj/: project.pbxproj
Old Materials/С++/1.Very simple Tasks/Task 1/: main.cpp
Old Materials/С++/1.Very simple Tasks/Task 2/: main.cpp
Old Materials/С++/1.Very simple Tasks/Task 3/: main.cpp
Old Materials/С++/1.Very simple Tasks/Task 4/: main.cpp
Old Materials/С++/1.Very simple Tasks/Task Yandex/: main.cpp
Old Materials/С++/C++ Introduction/C++ Introduction.xcodeproj/: project.pbxproj
Old Materials/С++/C++ Introduction/Eighth lesson/: main.cpp
Old Materials/С++/C++ Introduction/Eleventh lesson/: main.cpp
Old Materials/С++/C++ Introduction/Fifth lesson/: main.cpp
Old Materials/С++/C++ Introduction/First lesson/: main.cpp
Old Materials/С++/C++ Introduction/Fourth lesson/: main.cpp
(+60 files in other folders)
